# uvie-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: perf.rs
docs/criterion/compare_telex/cluster/report/: index.html
docs/criterion/compare_telex/mixed/report/: index.html
docs/criterion/compare_telex/report/: index.html
docs/criterion/compare_telex/sentence/report/: index.html
docs/criterion/compare_telex/simple/report/: index.html
docs/criterion/compare_telex/ui/report/: index.html
docs/criterion/compare_telex/uow/report/: index.html
docs/criterion/compare_telex/uvie/report/: index.html
docs/criterion/compare_telex/vi/report/: index.html
docs/criterion/compare_vni/cluster/report/: index.html
docs/criterion/compare_vni/mixed/report/: index.html
docs/criterion/compare_vni/report/: index.html
docs/criterion/compare_vni/sentence/report/: index.html
docs/criterion/compare_vni/simple/report/: index.html
docs/criterion/compare_vni/ui/report/: index.html
docs/criterion/compare_vni/uvie/report/: index.html
docs/criterion/compare_vni/vi/report/: index.html
docs/criterion/report/: index.html
docs/criterion/uvie_telex/cluster/base/: sample.json  tukey.json
docs/criterion/uvie_telex/cluster/change/: estimates.json
docs/criterion/uvie_telex/cluster/new/: benchmark.json  estimates.json
docs/criterion/uvie_telex/cluster/report/: index.html
docs/criterion/uvie_telex/report/: index.html
docs/criterion/uvie_vni/report/: index.html
src/: buffers.rs  engine.rs  lib.rs  main.rs  modes.rs  tests.rs  tone.rs
(+186 files in other folders)
