[package]
name = "uvie"
version = "0.1.0"
edition = "2024"

[dependencies]
heapless = { version = "0.8", optional = true }

[dev-dependencies]
criterion = "0.5"
vi = "0.8"

[features]
default = ["std"]
std = []
heapless = ["dep:heapless"]

[[bin]]
name = "uvie"
path = "src/main.rs"
required-features = ["std"]

[[bench]]
name = "perf"
harness = false
