[package]
name = "uvie"
version = "1.1.0"
edition = "2024"
description = "Ultra fast Vietnamese input method engine (Telex, VNI)"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thuupx/uvie-rs"
homepage = "https://github.com/thuupx/uvie-rs"
keywords = ["vietnamese", "ime", "telex", "vni", "input-method"]
categories = ["text-processing", "no-std::no-alloc"]
exclude = ["target/", "docs/"]

[dependencies]
heapless = { version = "0.8", optional = true }

[dev-dependencies]
criterion = "0.5"
vi = "0.8"

[features]
default = ["std"]
std = []
heapless = ["dep:heapless"]

[[bin]]
name = "uvie"
path = "src/main.rs"
required-features = ["std"]

[[bench]]
name = "perf"
harness = false
